bin/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  13  ExtendsClause : EXTENDS IDENTIFIER
  14                |

  15  FieldList : FieldList VariableDef
  16            | FieldList FunctionDef
  17            |

  18  Formals : VariableList
  19          |

  20  VariableList : VariableList ',' Variable
  21               | Variable

  22  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  23              | Type IDENTIFIER '(' Formals ')' StmtBlock

  24  StmtBlock : '{' StmtList '}'

  25  StmtList : StmtList Stmt
  26           |

  27  Stmt : VariableDef
  28       | SimpleStmt ';'
  29       | IfStmt
  30       | WhileStmt
  31       | ForStmt
  32       | ReturnStmt ';'
  33       | PrintStmt ';'
  34       | BreakStmt ';'
  35       | StmtBlock
  36       | GuardedIfStmt
  37       | GuardedDoStmt

  38  SimpleStmt : LValue '=' Expr
  39             | Call
  40             |

  41  LValue : IDENTIFIER
  42         | Expr '.' IDENTIFIER
  43         | Expr '[' Expr ']'

  44  Call : IDENTIFIER '(' Actuals ')'
  45       | Expr '.' IDENTIFIER '(' Actuals ')'

  46  Expr : LValue
  47       | Call
  48       | Constant
  49       | Expr '?' Expr ':' Expr
  50       | Expr '+' Expr
  51       | Expr '-' Expr
  52       | Expr '*' Expr
  53       | Expr '/' Expr
  54       | Expr '%' Expr
  55       | Expr EQUAL Expr
  56       | Expr NOT_EQUAL Expr
  57       | Expr '<' Expr
  58       | Expr '>' Expr
  59       | Expr LESS_EQUAL Expr
  60       | Expr GREATER_EQUAL Expr
  61       | Expr AND Expr
  62       | Expr OR Expr
  63       | '(' Expr ')'
  64       | '-' Expr
  65       | '!' Expr

  66  $$1 :

  67  Expr : IDENTIFIER $$1 SELF_INC
  68       | SELF_INC IDENTIFIER

  69  $$2 :

  70  Expr : IDENTIFIER $$2 SELF_DEC

  71  $$3 :

  72  Expr : SELF_DEC IDENTIFIER $$3
  73       | READ_INTEGER '(' ')'
  74       | READ_LINE '(' ')'
  75       | THIS
  76       | NEW IDENTIFIER '(' ')'
  77       | NEW Type '[' Expr ']'
  78       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  79       | '(' CLASS IDENTIFIER ')' Expr
  80       | NUMINSTANCES '(' IDENTIFIER ')'

  81  Constant : LITERAL
  82           | NULL

  83  Actuals : ExprList
  84          |

  85  ExprList : ExprList ',' Expr
  86           | Expr

  87  WhileStmt : WHILE '(' Expr ')' Stmt

  88  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  89  BreakStmt : BREAK

  90  IfStmt : IF '(' Expr ')' Stmt ElseClause

  91  ElseClause : ELSE Stmt
  92             |

  93  ReturnStmt : RETURN Expr
  94             | RETURN

  95  PrintStmt : PRINT '(' ExprList ')'

  96  GuardedIfStmt : IF GuardedStmts FI

  97  GuardedDoStmt : DO GuardedStmts OD

  98  GuardedStmts : GuardedStmts CASESEP Expr ':' Stmt
  99               | Expr ':' Stmt

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	.  error

	Program  goto 2
	ClassList  goto 3
	ClassDef  goto 4


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 5
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	$end  reduce 1

	ClassDef  goto 6


state 4
	ClassList : ClassDef .  (3)

	.  reduce 3


state 5
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (14)

	EXTENDS  shift 7
	'{'  reduce 14

	ExtendsClause  goto 8


state 6
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 7
	ExtendsClause : EXTENDS . IDENTIFIER  (13)

	IDENTIFIER  shift 9
	.  error


state 8
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 10
	.  error


state 9
	ExtendsClause : EXTENDS IDENTIFIER .  (13)

	.  reduce 13


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (17)

	.  reduce 17

	FieldList  goto 11


state 11
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (15)
	FieldList : FieldList . FunctionDef  (16)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	STATIC  shift 17
	'}'  shift 18
	.  error

	VariableDef  goto 19
	Variable  goto 20
	Type  goto 21
	FunctionDef  goto 22


state 12
	Type : VOID .  (7)

	.  reduce 7


state 13
	Type : BOOL .  (8)

	.  reduce 8


state 14
	Type : INT .  (6)

	.  reduce 6


state 15
	Type : STRING .  (9)

	.  reduce 9


state 16
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 23
	.  error


state 17
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (22)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	.  error

	Type  goto 24


state 18
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 19
	FieldList : FieldList VariableDef .  (15)

	.  reduce 15


state 20
	VariableDef : Variable . ';'  (4)

	';'  shift 25
	.  error


state 21
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 26
	'['  shift 27
	.  error


state 22
	FieldList : FieldList FunctionDef .  (16)

	.  reduce 16


state 23
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 24
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (22)

	IDENTIFIER  shift 28
	'['  shift 27
	.  error


state 25
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 26
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 29
	';'  reduce 5


state 27
	Type : Type '[' . ']'  (11)

	']'  shift 30
	.  error


state 28
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (22)

	'('  shift 31
	.  error


state 29
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (19)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 34
	VariableList  goto 35


state 30
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 31
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (22)
	Formals : .  (19)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 36
	VariableList  goto 35


state 32
	VariableList : Variable .  (21)

	.  reduce 21


state 33
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 37
	'['  shift 27
	.  error


state 34
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 38
	.  error


state 35
	Formals : VariableList .  (18)
	VariableList : VariableList . ',' Variable  (20)

	','  shift 39
	')'  reduce 18


state 36
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (22)

	')'  shift 40
	.  error


state 37
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 38
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 41
	.  error

	StmtBlock  goto 42


state 39
	VariableList : VariableList ',' . Variable  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	.  error

	Variable  goto 43
	Type  goto 33


state 40
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (22)

	'{'  shift 41
	.  error

	StmtBlock  goto 44


state 41
	StmtBlock : '{' . StmtList '}'  (24)
	StmtList : .  (26)

	.  reduce 26

	StmtList  goto 45


state 42
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 43
	VariableList : VariableList ',' Variable .  (20)

	.  reduce 20


state 44
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (22)

	.  reduce 22


state 45
	StmtBlock : '{' StmtList . '}'  (24)
	StmtList : StmtList . Stmt  (25)
	SimpleStmt : .  (40)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	NULL  shift 46
	THIS  shift 47
	WHILE  shift 48
	FOR  shift 49
	IF  shift 50
	RETURN  shift 51
	BREAK  shift 52
	NEW  shift 53
	PRINT  shift 54
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	IDENTIFIER  shift 58
	INSTANCEOF  shift 59
	SELF_INC  shift 60
	SELF_DEC  shift 61
	NUMINSTANCES  shift 62
	DO  shift 63
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	'{'  shift 41
	'}'  shift 67
	';'  reduce 40

	VariableDef  goto 68
	Variable  goto 20
	Type  goto 33
	StmtBlock  goto 69
	Stmt  goto 70
	SimpleStmt  goto 71
	IfStmt  goto 72
	WhileStmt  goto 73
	ForStmt  goto 74
	ReturnStmt  goto 75
	PrintStmt  goto 76
	BreakStmt  goto 77
	GuardedIfStmt  goto 78
	GuardedDoStmt  goto 79
	LValue  goto 80
	Expr  goto 81
	Call  goto 82
	Constant  goto 83


state 46
	Constant : NULL .  (82)

	.  reduce 82


state 47
	Expr : THIS .  (75)

	.  reduce 75


state 48
	WhileStmt : WHILE . '(' Expr ')' Stmt  (87)

	'('  shift 84
	.  error


state 49
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (88)

	'('  shift 85
	.  error


state 50
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (90)
	GuardedIfStmt : IF . GuardedStmts FI  (96)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	IDENTIFIER  shift 58
	INSTANCEOF  shift 59
	SELF_INC  shift 60
	SELF_DEC  shift 61
	NUMINSTANCES  shift 62
	'-'  shift 64
	'!'  shift 65
	'('  shift 86
	.  error

	LValue  goto 87
	Expr  goto 88
	Call  goto 89
	Constant  goto 83
	GuardedStmts  goto 90


state 51
	ReturnStmt : RETURN . Expr  (93)
	ReturnStmt : RETURN .  (94)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	IDENTIFIER  shift 58
	INSTANCEOF  shift 59
	SELF_INC  shift 60
	SELF_DEC  shift 61
	NUMINSTANCES  shift 62
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	';'  reduce 94

	LValue  goto 87
	Expr  goto 91
	Call  goto 89
	Constant  goto 83


state 52
	BreakStmt : BREAK .  (89)

	.  reduce 89


state 53
	Expr : NEW . IDENTIFIER '(' ')'  (76)
	Expr : NEW . Type '[' Expr ']'  (77)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	IDENTIFIER  shift 92
	.  error

	Type  goto 93


state 54
	PrintStmt : PRINT . '(' ExprList ')'  (95)

	'('  shift 94
	.  error


state 55
	Expr : READ_INTEGER . '(' ')'  (73)

	'('  shift 95
	.  error


state 56
	Expr : READ_LINE . '(' ')'  (74)

	'('  shift 96
	.  error


state 57
	Constant : LITERAL .  (81)

	.  reduce 81


state 58
	LValue : IDENTIFIER .  (41)
	Call : IDENTIFIER . '(' Actuals ')'  (44)
	Expr : IDENTIFIER . $$1 SELF_INC  (67)
	Expr : IDENTIFIER . $$2 SELF_DEC  (70)
	$$1 : .  (66)
	$$2 : .  (69)

	'('  shift 97
	AND  reduce 41
	OR  reduce 41
	LESS_EQUAL  reduce 41
	GREATER_EQUAL  reduce 41
	EQUAL  reduce 41
	NOT_EQUAL  reduce 41
	SELF_INC  reduce 66
	SELF_DEC  reduce 69
	'+'  reduce 41
	'-'  reduce 41
	'*'  reduce 41
	'/'  reduce 41
	'%'  reduce 41
	'='  reduce 41
	'>'  reduce 41
	'<'  reduce 41
	'.'  reduce 41
	','  reduce 41
	';'  reduce 41
	')'  reduce 41
	'['  reduce 41
	']'  reduce 41
	'?'  reduce 41
	':'  reduce 41

	$$1  goto 98
	$$2  goto 99


state 59
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (78)

	'('  shift 100
	.  error


state 60
	Expr : SELF_INC . IDENTIFIER  (68)

	IDENTIFIER  shift 101
	.  error


state 61
	Expr : SELF_DEC . IDENTIFIER $$3  (72)

	IDENTIFIER  shift 102
	.  error


state 62
	Expr : NUMINSTANCES . '(' IDENTIFIER ')'  (80)

	'('  shift 103
	.  error


state 63
	GuardedDoStmt : DO . GuardedStmts OD  (97)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	IDENTIFIER  shift 58
	INSTANCEOF  shift 59
	SELF_INC  shift 60
	SELF_DEC  shift 61
	NUMINSTANCES  shift 62
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	LValue  goto 87
	Expr  goto 88
	Call  goto 89
	Constant  goto 83
	GuardedStmts  goto 104


state 64
	Expr : '-' . Expr  (64)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	IDENTIFIER  shift 58
	INSTANCEOF  shift 59
	SELF_INC  shift 60
	SELF_DEC  shift 61
	NUMINSTANCES  shift 62
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	LValue  goto 87
	Expr  goto 105
	Call  goto 89
	Constant  goto 83


state 65
	Expr : '!' . Expr  (65)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	IDENTIFIER  shift 58
	INSTANCEOF  shift 59
	SELF_INC  shift 60
	SELF_DEC  shift 61
	NUMINSTANCES  shift 62
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	LValue  goto 87
	Expr  goto 106
	Call  goto 89
	Constant  goto 83


state 66
	Expr : '(' . Expr ')'  (63)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (79)

	CLASS  shift 107
	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	IDENTIFIER  shift 58
	INSTANCEOF  shift 59
	SELF_INC  shift 60
	SELF_DEC  shift 61
	NUMINSTANCES  shift 62
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	LValue  goto 87
	Expr  goto 108
	Call  goto 89
	Constant  goto 83


state 67
	StmtBlock : '{' StmtList '}' .  (24)

	.  reduce 24


state 68
	Stmt : VariableDef .  (27)

	.  reduce 27


state 69
	Stmt : StmtBlock .  (35)

	.  reduce 35


state 70
	StmtList : StmtList Stmt .  (25)

	.  reduce 25


state 71
	Stmt : SimpleStmt . ';'  (28)

	';'  shift 109
	.  error


state 72
	Stmt : IfStmt .  (29)

	.  reduce 29


state 73
	Stmt : WhileStmt .  (30)

	.  reduce 30


state 74
	Stmt : ForStmt .  (31)

	.  reduce 31


state 75
	Stmt : ReturnStmt . ';'  (32)

	';'  shift 110
	.  error


state 76
	Stmt : PrintStmt . ';'  (33)

	';'  shift 111
	.  error


state 77
	Stmt : BreakStmt . ';'  (34)

	';'  shift 112
	.  error

